--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B3E5FC"
+    android:animationCache="false"
+    android:background="@drawable/backEcoMonitor"
+    android:clickable="false"
     tools:context=".MainActivity">
 
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_width="271dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="216dp"
+        android:background="#66BDDFE4"
         android:text="@string/ecomonitor"
         android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="30sp"
+        android:textColor="#33200F"
+        android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -27,10 +32,11 @@
         android:id="@+id/button"
         android:layout_width="117dp"
         android:layout_height="46dp"
-        android:layout_marginTop="392dp"
-        android:backgroundTint="#03A9F4"
+        android:layout_marginTop="200dp"
+        android:backgroundTint="#9ADEE8"
         android:text="@string/entrar"
         android:textColor="#000000"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
