--- a/app/src/main/res/layout/activity_terrario.xml
+++ b/app/src/main/res/layout/activity_terrario.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".Terrario">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/backEcoMonitor"
+        android:alpha="0.5"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
