--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animationCache="false"
-    android:background="@drawable/backEcoMonitor"
+    android:background="@drawable/backecomonitor"
     android:clickable="false"
     tools:context=".MainActivity">
 
