--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backecomonitor"
         android:alpha="0.5"
+        android:background="@drawable/fondo"
         />
 
     <TextView
@@ -104,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/backT"
             android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
