--- a/app/src/main/res/layout/activity_terrario.xml
+++ b/app/src/main/res/layout/activity_terrario.xml
@@ -12,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.5"
-        android:background="@drawable/backecomonitor"
+        android:background="@drawable/fondo"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="-264dp" />
 
     <LinearLayout
         android:layout_width="371dp"
         android:layout_height="641dp"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view"
@@ -104,6 +105,15 @@
             android:layout_height="70dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="Cargando datos..." />
+
+        <Button
+            android:id="@+id/backT"
+            android:layout_width="146dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:backgroundTint="#9ADEE8"
+            android:text="@string/volver"
+            android:textColor="#000000" />
     </LinearLayout>
 
 
