--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,7 +104,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <Button
-            android:id="@+id/backT"
+            android:id="@+id/backFS"
             android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
