--- a/app/src/main/res/layout/activity_terrario.xml
+++ b/app/src/main/res/layout/activity_terrario.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Terrario">
+    tools:context=".TerrarioFS">
 
     <View
         android:id="@+id/view"
@@ -36,21 +36,23 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="16dp" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Temperatura aire" />
+            android:text="Temperatura aire"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txtTempAire"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Cargando datos..." />
+            android:text="Cargando datos..."
+            android:textSize="30sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -61,14 +63,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
-            android:text="CO2 en el aire" />
+            android:text="CO2 en el aire"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txtCO2Aire"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Cargando datos..." />
+            android:text="Cargando datos..."
+            android:textSize="30sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -79,14 +83,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Temperatura del agua" />
+            android:text="Temperatura del agua"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txtTempAgua"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Cargando datos..." />
+            android:text="Cargando datos..."
+            android:textSize="30sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -97,14 +103,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="PH del agua" />
+            android:text="PH del agua"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txtPHAgua"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Cargando datos..." />
+            android:text="Cargando datos..."
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/backFS"
